--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
             <span>Desenvolvido por Rodrigo Vendramini</span>
             <nav class="footer-navigation">
                 <ul class="footer-list">
-                    <a href="Index.html"><li>Home</li></a>
+                    <a href="./index.html"><li>Home</li></a>
                     <a href="./contatos.html"><li>Contatos</li></a>
                     <a href="./fotos.html"><li>Fotos</li></a>
-                    <a href="./comentarios.html"><li>Comentários</li></a>
+                    <a href="./saiba-mais.html"><li>Comentários</li></a>
                 </ul>
             </nav>
         </footer>
