--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <a href="./index.html"><li>Home</li></a>
                     <a href="./contatos.html"><li>Contatos</li></a>
                     <a href="./fotos.html"><li>Fotos</li></a>
-                    <a href="./saiba-mais.html"><li>Comentários</li></a>
+                    <a href="./saiba-mais.html"><li>Saiba Mais</li></a>
                 </ul>
             </nav>
         </footer>
