--- a/saiba-mais.html
+++ b/saiba-mais.html
@@ -49,7 +49,7 @@
         <span>Desenvolvido por Rodrigo Vendramini</span>
         <nav class="footer-navigation">
             <ul class="footer-list">
-                <a href=".index.html"><li>Home</li></a>
+                <a href="./index.html"><li>Home</li></a>
                 <a href="./contatos.html"><li>Contatos</li></a>
                 <a href="./fotos.html"><li>Fotos</li></a>
                 <a href="./saiba-mais.html"><li>Saiba Mais</li></a>
